2009-01-21  Naohiro Aota  <naota@elisp.net>

	* w3m-session.el (w3m-session-last-autosave-session): Check if
	autosaved sessions set exists before asking whether to load the last
	sessions set; Search older sessions sets when the last sessions set
	doesn't exist (maybe it is removed by user); Load autosaved sessions
	set when w3m-session-load-last-sessions is non-nil.
	(w3m-session-load-last-sessions): Fix docstring; Change `auto' to `t'.
	(w3m-session-crash-recovery-title): New variable.
	(w3m-session-load-crashed-sessions): Ditto.
	(w3m-session-crash-recovery-save): New function.

	* w3m.el (w3m-goto-url): Save sessions set for crash recovering.
	(w3m-delete-buffer): Ditto.
	(w3m): Load crashed sessions if necessary.  Suggested by Samuel Wales
	<samologist@gmail.com>.

2009-01-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Use new `w3m-balloon-help'
	text-property for balloon help.
	(w3m-fontify-images): Ditto and create help together href, alt and URL
	of image.

2009-01-19  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-image-anchor): Fix docstring.
	(toplevel): Fix w3m-image-anchor-face's alias.

2009-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-images): Put the 'full alt text' on new
	'w3m-image-alt' property.
	(w3m-print-this-url): Print the content of 'w3m-image-alt'.

	* w3m-util.el (w3m-image-alt): New macro.

2009-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/Makefile.in (.texi.info): Use --no-split.

2009-01-11  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m): Move last session restoring asking afterward, so that
	the restoring wouldn't be avoided by w3m-input-url's input.

	* w3m-session.el (w3m-session-last-autosave-session): Follow the above
	change.

2009-01-10  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m): Check whether to load the last autosaved
	sessions.  Suggested by Samuel Wales <samologist@gmail.com>.

	* w3m-session.el (w3m-session-automatic-keep-number): New variable.