@@ -1,3 +1,8 @@
+2009-01-21  Kevin Ryde  <user42@zip.com.au>
+
+	* w3m.el (w3m-search-name-anchor): Return true meaning "found" if
+	point is already at the anchor position.
+
 2009-01-21  Naohiro Aota  <naota@elisp.net>
 
 	* w3m-session.el (w3m-session-last-autosave-session): Check if
